kubernetes/workload/05-ingress/alloy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - alloy.20-166-89-50.nip.io
    secretName: alloy-tls-cert
  rules:
    - host: alloy.20-166-89-50.nip.io
      http:
        paths:
          - path: /loki/api/v1/push
            pathType: Prefix
            backend:
              service:
                name: alloy-loki-gateway
                port:
                  number: 3101
