kubernetes/workload/05-ingress/app-ingress-pip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nutrition-planner
  namespace: app
  labels:
    app: nutrition-planner
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx/client_max_body_size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nutrition-planner.20-166-89-50.nip.io
      secretName: nutrition-planner-pip-tls-cert
  rules:
    - host: nutrition-planner.20-166-89-50.nip.io
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: nutrition-keycloak-http
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nutrition-planner-fe
                port:
                  number: 80
